Updating chart and image name

--- a/.devops/k8s/helm/values.yaml
+++ b/.devops/k8s/helm/values.yaml
@@ -3,7 +3,7 @@ environment: null
 
 container:
   image:
-    name: go-service
+    name: jbc0981/go-service
     tag: latest
   resources:
     requests:
